Add Tyra logo to Tyra page

--- a/www/_sass/minima/custom.scss
+++ b/www/_sass/minima/custom.scss
@@ -9,6 +9,10 @@ a[href="#lek"] img {
     float: right;
 }
 
+#ext-logo {
+    float: right;
+}
+
 #main-nav {
     background: #fdfdfd;
     text-decoration: none;
