Hide parts of address on mobile

--- a/www/_sass/minima/custom.scss
+++ b/www/_sass/minima/custom.scss
@@ -93,7 +93,7 @@
 
 #contact-details {
     .u-photo { display: none; }
-    .p-name { visibility: hidden; }
+    .p-name { display: none; }
     .h-geo img {
         vertical-align: bottom;
     }
