Add extra menu item on mobile since the dropdown requires a double click

--- a/www/_sass/minima/custom.scss
+++ b/www/_sass/minima/custom.scss
@@ -89,6 +89,10 @@
         overflow: hidden;
         width: calc(100% - 310px);
     }
+
+    .mobile-only {
+        display: none !important;
+    }
 }
 
 #contact-details {
