--- a/www/_includes/header.html
+++ b/www/_includes/header.html
@@ -23,6 +23,7 @@
                     <li>
                         <a href='/om/'>Om Bullret</a>
                         <ul class="dropdown">
+                            <li class="mobile-only"><a href="/om/">Om Bullret</a></li>
                             <li><a href="/om/varfor">Varför Bullret</a></li>
                             <li><a href="/om/oppet-hus">Öppet hus</a></li>
                             <li><a href="/om/pedagogik">Pedagogik</a></li>
@@ -34,6 +35,7 @@
                     <li>
                         <a href="/kooperativ/">Kooperativ</a>
                         <ul class="dropdown">
+                            <li class="mobile-only"><a href="/kooperativ/">Kooperativ</a></li>
                             <li><a href="/avgifter/">Avgifter</a></li>
                             <li><a href="/kooperativ/fixardag/">Insatser och fixardag</a></li>
                         </ul>
