Fix employee page without descriptions

--- a/www/_sass/minima/employees.scss
+++ b/www/_sass/minima/employees.scss
@@ -1,6 +1,7 @@
 .employee {
     margin-top: 1rem;
     border-bottom: 1px solid #e8e8e8;
+    overflow: hidden;
 
     &:first-child {
         margin-top: 0;
@@ -13,6 +14,7 @@
     .employee-photo {
         border-radius: 50%;
         width: 150px;
+        margin-bottom: 1rem;
     }
 
     .name {
