Add some information about Tre ska bli noll

--- a/www/_includes/header.html
+++ b/www/_includes/header.html
@@ -1,6 +1,7 @@
 <header class="site-header">
 
     <div class="wrapper">
+
         {%- assign default_paths = site.pages | map: "path" -%}
         {%- assign page_paths = site.header_pages | default: default_paths -%}
         {%- assign titles_size = site.pages | map: 'title' | join: '' | size -%}
@@ -46,5 +47,11 @@
             </div>
         </nav>
         {%- endif -%}
+    </div>
+
+    <div id="treskablinoll">
+      <a href="/treskablinoll/">
+        <img src="/img/treskablinoll.png" alt="Tre ska bli noll" />
+      </a>
     </div>
 </header>
