--- a/www/_sass/minima/custom.scss
+++ b/www/_sass/minima/custom.scss
@@ -158,3 +158,10 @@
 .small-icon + .small-icon {
   padding-left: 10px;
 }
+
+#treskablinoll {
+  position: absolute;
+  right: 15px;
+  top: 15px;
+  width: 170px;
+}
