Add "Tre ska bli noll" to main navigation

--- a/www/_includes/header.html
+++ b/www/_includes/header.html
@@ -31,6 +31,7 @@
                             <li><a href="/om/rutiner">Rutiner</a></li>
                             <li><a href="/om/personal">Personal</a></li>
                             <li><a href="/om/tyra">Tyra</a></li>
+                            <li><a href="/treskablinoll/">Tre ska bli noll</a></li>
                         </ul>
                     </li>
                     <li>
