Hide Tre ska bli noll logo on smaller screens

--- a/www/_sass/minima/custom.scss
+++ b/www/_sass/minima/custom.scss
@@ -160,8 +160,15 @@
 }
 
 #treskablinoll {
+  display: none;
   position: absolute;
   right: 15px;
   top: 15px;
   width: 170px;
+}
+
+@media (min-width: 1024px) {
+  #treskablinoll {
+    display: block !important;
+  }
 }
