--- a/_includes/header.html
+++ b/_includes/header.html
@@ -47,7 +47,7 @@
                     </li>
                     <li><a href="/kontakt/">Kontakt</a></li>
                     <li><a href="/intresse/">Ansökan</a></li>
-                    <li><a href="/jobb/">Jobb</a></li>
+                    <li><a href="/jobb/">Ledig tjänst</a></li>
                 </ul>
             </div>
         </nav>
