Add phone number more places

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -42,6 +42,7 @@
           {%- if site.email -%}
           <li><a class="u-email" href="mailto:{{ site.email }}">{{ site.email }}</a></li>
           {%- endif -%}
+          <li><a href="tel:+46706071184" class="u-tel p-tel">070-607 11 84</a></li> 
         </ul>
       </div>
 
