updating various changes

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -28,12 +28,11 @@
                         <a href='/om/'>Om Bullret</a>
                         <ul class="dropdown">
                             <li><a href="/om/">Om Bullret</a></li>
-                            <li><a href="/om/varfor">Varför Bullret</a></li>
+                            <li><a href="/om/varforvalkommentillbullret/">Välkommen till Bullret</a></li>
                             <li><a href="/om/oppet-hus">Öppet hus</a></li>
                             <li><a href="/om/pedagogik">Pedagogik</a></li>
-                            <li><a href="/om/rutiner">Rutiner</a></li>
                             <li><a href="/om/personal">Personal</a></li>
-                            <li><a href="/om/tyra">Tyra</a></li>
+                            <li><a href="/om/dokumentation">Dokumentation</a></li>
                             <li><a href="/treskablinoll/">Tre ska bli noll</a></li>
                         </ul>
                     </li>
