--- a/_includes/header.html
+++ b/_includes/header.html
@@ -25,10 +25,9 @@
             <div class="trigger">
                 <ul id="main-nav">
                     <li>
-                        <a href='/om/'>Om Bullret</a>
+                        <a href='/om/bullret'>Om Bullret</a>
                         <ul class="dropdown">
-                            <li><a href="/om/">Om Bullret</a></li>
-                            <li><a href="/om/varforvalkommentillbullret/">Välkommen till Bullret</a></li>
+                            <li><a href="/om/bullret/">Välkommen till Bullret</a></li>
                             <li><a href="/om/oppet-hus">Öppet hus</a></li>
                             <li><a href="/om/pedagogik">Pedagogik</a></li>
                             <li><a href="/om/personal">Personal</a></li>
