--- a/_includes/header.html
+++ b/_includes/header.html
@@ -27,7 +27,7 @@
                     <li>
                         <a href='/om/bullret'>Om Bullret</a>
                         <ul class="dropdown">
-                            <li><a href="/om/bullret/">Välkommen till Bullret</a></li>
+                            <li><a href="/om/bullret">Välkommen till Bullret</a></li>
                             <li><a href="/om/oppet-hus">Öppet hus</a></li>
                             <li><a href="/om/pedagogik">Pedagogik</a></li>
                             <li><a href="/om/personal">Personal</a></li>
