--- a/_sass/minima/custom.scss
+++ b/_sass/minima/custom.scss
@@ -36,7 +36,7 @@
         text-decoration: none;
     }
 
-    &>li {
+    &>li > a {
         padding: 1rem;
     }
 
@@ -50,7 +50,6 @@
         opacity: 0;
         position: absolute;
         transition: all 0.5s ease;
-        margin-top: 1rem;
         left: 0;
         display: none;
         min-width: 5rem;
@@ -69,7 +68,6 @@
     li ul li {
         clear: both;
         width: 100%;
-        padding: 0.5rem 1rem;
         background: #fdfdfd;
         border-left: 1px solid #e8e8e8;
         border-right: 1px solid #e8e8e8;
@@ -78,6 +76,10 @@
 
         &:hover {
             background: darkorange;
+        }
+
+        & > a {
+            padding: 0.5rem 1rem;
         }
     }
 
